# sd_rover_pico

./: rover.py
pico-rover/: CMakeLists.txt  rover_lora.c
pico-rover/include/: config.h  definitions.h  main.h  motors.h
pico-rover/src/: comms.c  config.c  main.c  motors.c
